##
## $Id$
##

include $(top_srcdir)/mircommon.mak

## Removed mbanal, doesn't build in regular miriad anyway...
## CGK 12jun2007

bin_PROGRAMS = antpol atmerge atxy blflag bootflux bwsel calred closure conterr contsen csflag early fgflag im2uv mfflat mosgen offaxis offpol opcal paraplot qvack sfunc sinpoly transfix uvaflag uvamp uvarchdd uvaver uvcal uvcal2 uvcat uvcheck uvclip uvcover uvdecor uvdiff uvedit uvfft uvfit uvfix uvflag uvflux uvfstats uvgains uvgen uvgenmodel uvglue uvimage uvindex uvlin uvlist uvmodel uvphase uvplanet uvplot uvplt uvpnt uvputhd uvrandom uvratio uvredo uvsector uvspec uvspect uvsplit uvstat uvsub uvswap uvtcor uvtplt uvtrack uvtriple uvtsub uvwide varfit varlist varmap varplot varplt

AM_CFLAGS = @x_cflags@
AM_FFLAGS = @no_globals@
LDADD = $(prog_libs)

BUILT_SOURCES = antpol.f atmerge.f atxy.f blflag.f bootflux.f bwsel.f calred.f closure.f conterr.f contsen.f csflag.f early.f fgflag.f im2uv.f mfflat.f mosgen.f offaxis.f offpol.f opcal.f paraplot.f qvack.f sfunc.f sinpoly.f transfix.f uvaflag.f uvamp.f uvarchdd.f uvaver.f uvcal.f uvcal2.f uvcat.f uvcheck.f uvclip.f uvcover.f uvdecor.f uvdiff.f uvedit.f uvfft.f uvfit.f uvfix.f uvflag.f uvflux.f uvfstats.f uvgains.f uvgen.f uvgenmodel.f uvglue.f uvimage.f uvindex.f uvlin.f uvlist.f uvmodel.f uvphase.f uvplanet.f uvplot.f uvplt.f uvpnt.f uvputhd.f uvrandom.f uvratio.f uvredo.f uvsector.f uvspec.f uvspect.f uvsplit.f uvstat.f uvsub.f uvswap.f uvtcor.f uvtplt.f uvtrack.f uvtriple.f uvtsub.f uvwide.f varfit.f varlist.f varmap.f varplot.f varplt.f

noinst_HEADERS = atxy.h sinpoly.h uvaver.h uvdiff.h uvfit.h uvgains.h uvgen.h uvgenmodel.h uvlist.h uvplot.h uvpnt.h uvputhd.h uvspec.h uvsplit.h uvtrack.h varplot.h

EXTRA_DIST = antpol.for atmerge.for atxy.for blflag.for bootflux.for bwsel.for calred.for closure.for conterr.for contsen.for csflag.for early.for fgflag.for im2uv.for mfflat.for mosgen.for offaxis.for offpol.for opcal.for paraplot.for qvack.for sfunc.for sinpoly.for transfix.for uvaflag.for uvamp.for uvarchdd.for uvaver.for uvcal.for uvcal2.for uvcat.for uvcheck.for uvclip.for uvcover.for uvdecor.for uvdiff.for uvedit.for uvfft.for uvfit.for uvfix.for uvflag.for uvflux.for uvfstats.for uvgains.for uvgen.for uvgenmodel.for uvglue.for uvimage.for uvindex.for uvlin.for uvlist.for uvmodel.for uvphase.for uvplanet.for uvplot.for uvplt.for uvpnt.for uvputhd.for uvrandom.for uvratio.for uvredo.for uvsector.for uvspec.for uvspect.for uvsplit.for uvstat.for uvsub.for uvswap.for uvtcor.for uvtplt.for uvtrack.for uvtriple.for uvtsub.for uvwide.for varfit.for varlist.for varmap.for varplot.for varplt.for

nodist_antpol_SOURCES = antpol.f
nodist_atmerge_SOURCES = atmerge.f
nodist_atxy_SOURCES = atxy.f
nodist_blflag_SOURCES = blflag.f
nodist_bootflux_SOURCES = bootflux.f
nodist_bwsel_SOURCES = bwsel.f
nodist_calred_SOURCES = calred.f
nodist_closure_SOURCES = closure.f
nodist_conterr_SOURCES = conterr.f
nodist_contsen_SOURCES = contsen.f
nodist_csflag_SOURCES = csflag.f
nodist_early_SOURCES = early.f
nodist_fgflag_SOURCES = fgflag.f
nodist_im2uv_SOURCES = im2uv.f
nodist_mfflat_SOURCES = mfflat.f
nodist_mosgen_SOURCES = mosgen.f
nodist_offaxis_SOURCES = offaxis.f
nodist_offpol_SOURCES = offpol.f
nodist_opcal_SOURCES = opcal.f
nodist_paraplot_SOURCES = paraplot.f
nodist_qvack_SOURCES = qvack.f
nodist_sfunc_SOURCES = sfunc.f
nodist_sinpoly_SOURCES = sinpoly.f
nodist_transfix_SOURCES = transfix.f
nodist_uvaflag_SOURCES = uvaflag.f
nodist_uvamp_SOURCES = uvamp.f
nodist_uvarchdd_SOURCES = uvarchdd.f
nodist_uvaver_SOURCES = uvaver.f
nodist_uvcal_SOURCES = uvcal.f
nodist_uvcal2_SOURCES = uvcal2.f
nodist_uvcat_SOURCES = uvcat.f
nodist_uvcheck_SOURCES = uvcheck.f
nodist_uvclip_SOURCES = uvclip.f
nodist_uvcover_SOURCES = uvcover.f
nodist_uvdecor_SOURCES = uvdecor.f
nodist_uvdiff_SOURCES = uvdiff.f
nodist_uvedit_SOURCES = uvedit.f
nodist_uvfft_SOURCES = uvfft.f
nodist_uvfit_SOURCES = uvfit.f
nodist_uvfix_SOURCES = uvfix.f
nodist_uvflag_SOURCES = uvflag.f
nodist_uvflux_SOURCES = uvflux.f
nodist_uvfstats_SOURCES = uvfstats.f
nodist_uvgains_SOURCES = uvgains.f
nodist_uvgen_SOURCES = uvgen.f
nodist_uvgenmodel_SOURCES = uvgenmodel.f
nodist_uvglue_SOURCES = uvglue.f
nodist_uvimage_SOURCES = uvimage.f
nodist_uvindex_SOURCES = uvindex.f
nodist_uvlin_SOURCES = uvlin.f
nodist_uvlist_SOURCES = uvlist.f
nodist_uvmodel_SOURCES = uvmodel.f
nodist_uvphase_SOURCES = uvphase.f
nodist_uvplanet_SOURCES = uvplanet.f
nodist_uvplot_SOURCES = uvplot.f
nodist_uvplt_SOURCES = uvplt.f
nodist_uvpnt_SOURCES = uvpnt.f
nodist_uvputhd_SOURCES = uvputhd.f
nodist_uvrandom_SOURCES = uvrandom.f
nodist_uvratio_SOURCES = uvratio.f
nodist_uvredo_SOURCES = uvredo.f
nodist_uvsector_SOURCES = uvsector.f
nodist_uvspec_SOURCES = uvspec.f
nodist_uvspect_SOURCES = uvspect.f
nodist_uvsplit_SOURCES = uvsplit.f
nodist_uvstat_SOURCES = uvstat.f
nodist_uvsub_SOURCES = uvsub.f
nodist_uvswap_SOURCES = uvswap.f
nodist_uvtcor_SOURCES = uvtcor.f
nodist_uvtplt_SOURCES = uvtplt.f
nodist_uvtrack_SOURCES = uvtrack.f
nodist_uvtriple_SOURCES = uvtriple.f
nodist_uvtsub_SOURCES = uvtsub.f
nodist_uvwide_SOURCES = uvwide.f
nodist_varfit_SOURCES = varfit.f
nodist_varlist_SOURCES = varlist.f
nodist_varmap_SOURCES = varmap.f
nodist_varplot_SOURCES = varplot.f
nodist_varplt_SOURCES = varplt.f

DOCINPUTS = $(EXTRA_DIST)
include $(top_srcdir)/mirdoc.mak
